# codesight-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  todo.md
.codesight/: .csconfig.json  .gitignore  CHANGELOG.md  README.md  __init__.py  _version.py  collect_code.py  pyproject.toml
.codesight/.codesight/: llm.txt
.codesight/prompts/: bugfix.md  improvement.md
.codesight/tests/: __init__.py  pre_commit_hook.py  test_basic_functionality.py  test_isolated_environment.py
