[project]
name = "codesight"
version = "0.1.7"
description = "Analyze code with LLMs"
requires-python = ">=3.9"
dependencies = [
    "pathspec==0.12.1",
    "tiktoken==0.9.0",
    "pyperclip==1.9.0",
    "humanize==4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]